did some changes

--- a/index.html
+++ b/index.html
@@ -10,90 +10,68 @@
     <!--CSS Grid Calendar 
     This ia a Grid-base project with some mixture of Flex-->
     <div class="container">
-      <div class="headings">
-        <div class="day">
+      <div class="head">
+        <div>
           <p>Thursday 7th</p>
         </div>
-        <div class="year">
+        <div>
           <p>January 2016</p>
         </div>
       </div>
       <hr />
-
-      <div class="calendar">
-        <div>
-          <div class="calendar__days">mon</div>
-          <span class="calendar__light-days">28</span>
-          <div>4</div>
-          <div>11</div>
-          <div>18</div>
-          <div>25</div>
+      <div class="grid">
+        <div class="grid_title">SUN</div>
+        <div class="grid_title">MON</div>
+        <div class="grid_title">TUE</div>
+        <div class="grid_title">WED</div>
+        <div class="grid_title">THUR</div>
+        <div class="grid_title">FRI</div>
+        <div class="grid_title">SAT</div>
+        <div class="grid_day calendar_light-days">28</div>
+        <div class="grid_day calendar_light-days">29</div>
+        <div class="grid_day calendar_light-days">30</div>
+        <div class="grid_day calendar_light-days">31</div>
+        <div class="grid_day">1</div>
+        <div class="grid day">2</div>
+        <div class="grid day">3</div>
+        <div class="grid_day">4</div>
+        <div class="grid day">5</div>
+        <div class="grid_day">6</div>
+        <div class="grid day calendar-days seven">7</div>
+        <div class="grid_day">8</div>
+        <div class="grid_day">9</div>
+        <div class="grid day">10</div>
+        <div class="grid day">11</div>
+        <div class="grid_day">12</div>
+        <div class="grid day">13</div>
+        <div class="grid_day">14</div>
+        <div class="grid_day">15</div>
+        <div class="grid_day calendar-days sixteen">
+          16 <sup id="six">6</sup>
         </div>
-
-        <div>
-          <div class="calendar__days">tue</div>
-          <span class="calendar__light-days">29</span>
-          <div>5</div>
-          <div>12</div>
-          <div class="calendar__day nineteen">19 <sup id="five">5</sup></div>
-          <div>26</div>
+        <div class="grid day">17</div>
+        <div class="grid_day">18</div>
+        <div class="grid_day calendar-days nineteen">
+          19 <sup id="five">5</sup>
         </div>
-
-        <div>
-          <div class="calendar__days">wed</div>
-          <span class="calendar__light-days">30</span>
-          <div>6</div>
-          <div>13</div>
-          <div>20</div>
-          <div>27</div>
-        </div>
-
-        <div>
-          <div class="calendar__days">thu</div>
-          <span class="calendar__light-days">31</span>
-          <div class="calendar__day-seven">7</div>
-          <div>14</div>
-          <div>21</div>
-          <div>28</div>
-        </div>
-
-        <div>
-          <div class="calendar__days">fri</div>
-          <div>1</div>
-          <div>8</div>
-          <div>15</div>
-          <div>22</div>
-          <div>29</div>
-        </div>
-
-        <div>
-          <div class="calendar__days">sat</div>
-          <div>2</div>
-          <div>9</div>
-          <div class="calendar__day sixteen">16 <sup id="six">6</sup></div>
-          <div>23</div>
-          <div>30</div>
-        </div>
-
-        <div>
-          <div class="calendar__days">sun</div>
-          <div>3</div>
-          <div>10</div>
-          <div>17</div>
-          <div>24</div>
-          <div>31</div>
-        </div>
+        <div class="grid day">20</div>
+        <div class="grid_day">21</div>
+        <div class="grid day">22</div>
+        <div class="grid_day">23</div>
+        <div class="grid day">24</div>
+        <div class="grid_day">25</div>
+        <div class="grid_day">26</div>
+        <div class="grid day">27</div>
+        <div class="grid day">28</div>
+        <div class="grid_day">29</div>
+        <div class="grid day">30</div>
+        <div class="grid_day">31</div>
       </div>
-
       <hr />
-
       <footer>
-        <div>
-          <p>11:35 <span>am</span></p>
-        </div>
-
-        <span class="sign">+</span>
-        <div>12&deg;C</div>
+        <p>11:35am</p>
+        <span class="calendar-days sign">+</span>
+        <p>12&deg;C</p>
       </footer>
     </div>
   </body>
